[package]
name = "swmon"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.17", features = ["derive"] }
ddc-hi = "0.4.1"
tabled = "0.8.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "fat"
strip = "symbols"
