[package]
name = "swmon"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", default_features=false, features = ["std", "derive", "help"] }
ddc-hi = "0.4.1"
eframe = { version = "0.26.2", optional = true }
oneshot = { version = "0.1.6", default_features=false, features = ["std"], optional = true }
strum = { version = "0.26.1", default_features=false, features = ["std", "derive"], optional = true }
tabled = "0.10.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "fat"
strip = "symbols"

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:oneshot", "dep:strum"]


[patch.crates-io]
ddc-winapi = { git = "https://github.com/cr1901/ddc-winapi-rs", branch = "winfix-2.x"}
